Use JDK17 + fixes deprecation warning